[package]
name = "random_user"
version = "0.1.0"
edition = "2021"
authors = ["Jil Chabaro <jilchabaro@gmail.com>"]
description = "Random user generator using the api from <https://randomuser.me>"
repository = "https://github.com/jilchab/random_user"
license = "MIT"
readme = "README.md"
keywords = ["random", "user", "generator", "api", "randomuser"]

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = "0.11.18"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0.43"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
